--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -15,17 +15,6 @@
 
 
 <style type="text/css">
-    #SelectedPOTable_previous, #SelectedPOTable_next {
-        color: white !important;
-    }
-
-    tr.shown td.details-control {
-        background: url('/Image/Icon/ChildRowClose.png') no-repeat center center;
-    }
-
-    td.details-control {
-        background: url('/Image/Icon/ChildRowOpen.png') no-repeat center center;
-    }
 
     .whiteBackgrond form {
         height: 100%
@@ -40,20 +29,7 @@
         color: #999999
     }
 
-    .table_div > tbody > tr > td > * {
-        margin: 0.5em;
-    }
 
-    .table_div > tbody > tr > td:first-child {
-        text-align: right;
-        padding-right: 1em;
-        font-weight: bold;
-        vertical-align: middle;
-    }
-
-    .table_div > tbody > tr > td:nth-child(2) {
-        text-align: left;
-    }
 
     #myTable_info {
         color: white
@@ -76,8 +52,8 @@
         font-size: 1.5vw;
         font-weight: 900;
     }
-
 </style>
+
 
 <div class="DownLeftWhiteBackgrond">
     <div style="border:0px;padding:2vh;">
@@ -96,14 +72,14 @@
 
                 <td align="right"><p class="searchFont">Size</p></td>
                 <td align="center">
-                    @Html.DropDownListFor(o => o.ListSize, (List<SelectListItem>)ViewBag.ListSize, null, new { @class = "form-control", id = "dropListSize" })
+                    @Html.DropDownListFor(o => o.ListSize, (List<SelectListItem>)ViewBag.ListSize, null, new { @class = "form-control", id = "dropSize" })
                 </td>
             </tr>
 
             <tr>
                 <td align="right"><p class="searchFont">Product Type</p></td>
                 <td align="center">
-                    @Html.DropDownListFor(o => o.ListProductType, (List<SelectListItem>)ViewBag.ListProductType, null, new { @class = "form-control", id = "dropListProductType" })
+                    @Html.DropDownListFor(o => o.ListProductType, (List<SelectListItem>)ViewBag.ListProductType, null, new { @class = "form-control", id = "dropProductType" })
                 </td>
 
             </tr>
@@ -114,32 +90,66 @@
 <div class="DownRightWhiteBackgrond">
     <div style="border:0px;padding:2vh;">
         <h1 style="font-size: 3vh; font-weight: 900; color: #999999 ">Measurement</h1>
-        <table style="width:100%">
+        <button class="site-btn btn-blue" style="position:absolute;top:1em;right:8.6em" onclick="open_View();">View</button>
+        <button class="site-btn btn-blue" style="position:absolute;top:1em;right:0">Save</button>
+
+        <table style="width: 20vw;">
             <tr>
-                <td>
-                    <div>
-                        <p class="searchFont">Unit</p>
-                        @Html.TextBoxFor(o => o.SizeUnit, new { @class = "form-control", @disabled = "disabled" })
-                    </div>
-                </td>
-                <td>
-                    <button onclick="open_View();">View</button>
-                </td>
-
-                <td>
-                    <button>Save</button>
-                </td>
-
+                <td><p class="searchFont">Unit</p></td>
+                <td>@Html.TextBoxFor(o => o.SizeUnit, new { @class = "form-control", @disabled = "disabled" }) </td>
             </tr>
         </table>
 
-    </div>
-    <button style="right:7em;" class="button">Back</button>
-    <button style="right:0em;" class="button">Next</button>
+        <div style=" width: 51vw; height: 70vh; overflow-y: auto;">
+            <table class="MeasurementTable DefectTable table table-striped display" id="myTable">
+                <thead>
+                    <tr>
+                        <th>
+                            <p>Coding</p>
+                        </th>
+                        <th>
+                            <p>Description</p>
+                        </th>
+                        <th>
+                            <p>Tol(+)</p>
+                        </th>
+                        <th>
+                            <p>Tol(-)</p>
+                        </th>
+                        <th>
+                            <p idx="SizeCode"></p>
+                        </th>
+                        <th>
+                            <p></p>
+                        </th>
+                        <th>
+                            <p>Diff</p>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="7" style="height: 8vh;vertical-align: middle;" valign="middle" align="center">
+                            <h3>Data Loading.......</h3>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
+
+
+    </div>
+
+    <input type="hidden" id="goPage" name="goPage">
+    <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right:7em;" class="button">Back</button>
+    <button d="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
 
 
 </div>
+
+
+
 <div class="detail-dialog to-edit-detail">
     <div class="detail-dialog-content dialog-content-w-icon" style="height:40vh">
         <table style="width: 100%; margin-top: 2vh; ">
@@ -169,54 +179,6 @@
             </tbody>
         </table>
 
-        <!--<table cellspacing="100" id="myTable" class="table table-striped display">
-        <thead>
-            <tr class="row-name">
-                <th>Select</th>
-                <th>Packing List ID</th>
-                <th>CTN No</th>
-            </tr>
-        </thead>
-        <tbody>
-
-            <tr>
-                <td>
-                    2
-                </td>
-                <td>
-                    3
-                </td>
-                <td>
-                    6
-                </td>
-            </tr>-->
-        @*@foreach (var item in Model.SelectedPO)
-            {
-                int index = 0;
-                foreach (var subItem in Model.SelectCarton)
-                {
-                    int subindex = 0;
-                    <tr class="row-content" pkey="@item.OrderID,@item.POID" style="vertical-align: middle; text-align: center;">
-                        <td>
-                            @Html.CheckBox($"SelectedPO[{index}].SelectCarton[{subindex}].Selected", subItem.Selected, new { @type = "checkbox" })
-                        </td>
-                        <td>
-                            @Html.Hidden($"SelectedPO[{index}].SelectCarton[{subindex}].PackingListID", subItem.PackingListID)
-                            @Html.DisplayFor(modelItem => subItem.PackingListID)
-                        </td>
-                        <td>
-                            @Html.Hidden($"SelectedPO[{index}].SelectCarton[{subindex}].CTNNo", subItem.CTNNo)
-                            @Html.DisplayFor(modelItem => subItem.CTNNo)
-                        </td>
-                    </tr>
-
-                    subindex = subindex + 1;
-                }
-                index = index + 1;
-            }*@
-        <!--</tbody>
-
-        </table>-->
         <br />
         <div>
         </div>
@@ -224,24 +186,24 @@
 </div>
 
 
-
 <script type="text/javascript">
 
-    $('#myTable').DataTable({
-        "pageLength": 5,
-        "autoWidth": false,
-        "info": false,
-        "filter": false,
-        "paging": false,
-        "info": false,
-        "scrollY": "40vh",
-        "scrollCollapse": true,
-        columnDefs: [
-            { targets: 0, width: "30%" },
-            { targets: 1, width: "30%" },
-            { targets: 2, width: "30%" },
-        ]
+    var msg = new MessagerAlert();
+
+    $(function () {
+
+        $('#myTable').DataTable({
+
+            "pageLength": 10,
+            "filter": false,
+            "paging": true,
+            "scrollY": "49vh",
+            "scrollCollapse": true,
+
+        });
     });
+
+
 
     $(".detail-dialog").dialog({
         autoOpen: false,
@@ -269,7 +231,7 @@
 
     $(".to-edit-detail").dialog({
         width: "70%",
-        
+
         //dialogClass: "add-contact-box",
         //buttons: {
         //    "1": {
@@ -294,7 +256,7 @@
                 url: "@Url.Action("OpenView", new { Area = "FinalInspection" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ SP: '11' }),
+                data: JSON.stringify(),
                 async: true,
                     success: function (data) {
                         var articleOption = "", sizeOption = "", productTypeOption="";
@@ -322,6 +284,8 @@
                         $("#ViewkListSize").html(sizeOption);
                         $("#ViewListProductType").html(productTypeOption);
 
+                        reloadViewitem();
+
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
                     console.log(xhr.responseText);
@@ -333,48 +297,200 @@
         });
 
         $(".to-edit-detail").dialog("open");
-        $("#myTable").DataTable().columns.adjust();
     }
 
     $(document).ready(function () {
         $("#ViewListArticle").on("change", function () {
 
-            var article= document.getElementById("ViewListArticle").value;
-            var element = document.getElementById("ViewkListSize");
-            var articleOption = "", sizeOption = "", productTypeOption = "";
-
-            $("#ViewkListSize > option").each(function () {
-              //  alert(this.text + ' ' + this.value);
-
-                if (this.value.split(',')[0] == article) {
-                    sizeOption += "<option value=" + this.value + ">" + this.text  + "</option>";
-                }
-                else {
-                    sizeOption += "<option hidden value=" + this.value  + ">" + this.text + "</option>";
-                }
-            });
-
-            
-            $("#ViewkListSize").html(sizeOption);
-
-
-            $("#ViewListProductType > option").each(function () {
-                //  alert(this.text + ' ' + this.value);
-
-                if (this.value.split(',')[0] == article) {
-                    productTypeOption += "<option value=" + this.value + ">" + this.text + "</option>";
-                }
-                else {
-                    productTypeOption += "<option hidden value=" + this.value + ">" + this.text + "</option>";
-                }
-            });
-
-
-            $("#ViewListProductType").html(productTypeOption);
+            reloadViewitem();
 
         });
     });
 
 
+
+    function checkValue(self) {
+        document.getElementById("goPage").value = self;
+
+        return true;
+    }
+
+    function reloadViewitem() {
+        var article = document.getElementById("ViewListArticle").value;
+        var element = document.getElementById("ViewkListSize");
+        var articleOption = "", sizeOption = "", productTypeOption = "";
+
+        $("#ViewkListSize > option").each(function () {
+
+            if (this.value.split(',')[0] == article) {
+                sizeOption += "<option value=" + this.value + ">" + this.text + "</option>";
+            }
+            else {
+                sizeOption += "<option hidden value=" + this.value + ">" + this.text + "</option>";
+            }
+        });
+
+
+        $("#ViewkListSize").html(sizeOption);
+
+
+        $("#ViewListProductType > option").each(function () {
+
+            if (this.value.split(',')[0] == article) {
+                productTypeOption += "<option value=" + this.value + ">" + this.text + "</option>";
+            }
+            else {
+                productTypeOption += "<option hidden value=" + this.value + ">" + this.text + "</option>";
+            }
+        });
+
+
+        $("#ViewListProductType").html(productTypeOption);
+
+        return true;
+    }
+
+    $(document).ready(function () {
+        $("#dropArticle").on("change", function () {
+        });
+    });
+
+
+    $(document).ready(function () {
+        $("#dropSize").on("change", function () {
+
+            ReloadData();
+
+        });
+    });
+
+
+    $(document).ready(function () {
+        $("#dropProductType").on("change", function () {
+        });
+    });
+
+    function ReloadData() {
+        var dropArticle = document.getElementById("dropArticle");
+        var dropSize = document.getElementById("dropSize");
+        var dropProductType = document.getElementById("dropProductType");
+
+        if (dropArticle.value == "" || dropSize.value == "" || dropProductType.value == "") {
+            return;
+        }
+
+        var thead = "";
+        var SizeUnit = document.getElementById("SizeUnit").value ;
+        var tbody = "";
+
+
+        if (thead == "") {
+            thead += "<tr>";
+            thead += "<th><p>Description</p></th>";
+            thead += "<th><p>Tol(+)</p></th>";
+            thead += "<th><p>Tol(-)</p></th>";
+            thead += "<th><p idx='SizeCode'>" + dropSize.value + "</p></th>";
+            thead += "<th></th>";
+            thead += "<th><p>Diff</p></th>";
+            thead += "</tr>";
+        }
+
+
+        var items = @Html.Raw(Json.Encode(Model.ListMeasurementItem));
+        $.each(items, function (index, value) {
+            if (value.Size == dropSize.value) {
+
+                var readonly = "";
+                var bgColor = "bg-lightyellow";
+                if (!value.CanEdit) {
+                    bgColor = "bg-lightgray";
+                    readonly = "readonly";
+                }
+
+                tbody +=  `<tr >
+                <td class='bg-lightblue'><p>${value.Description}</p></td>
+                <td class='bg-lightblue'><p idx='Tol+'>${value.Tol1}</p></td>
+                <td class='bg-lightblue'><p idx='Tol-'>${value.Tol2}</p></td>
+                <td class='bg-lightgray'><p idx='standard'>${value.SizeSpec}</p></td>`;
+
+           if (SizeUnit == "INCH") {
+            tbody += "<td class='" + bgColor + "'><input type='text' idx='SizeSpec' placeholder= '__ __/__' class='" + bgColor + "' " + readonly + "></td>";
+        }
+        else {
+            tbody += "<td class='" + bgColor + "'><input type='number' idx='SizeSpec' class='" + bgColor + "' " + readonly + "></td>";
+        }
+
+        tbody += "<td><p class='Diff'></p></td>";
+                tbody += "</tr>";
+            }
+        });
+
+        $('.MeasurementTable>thead').html(thead);
+        $('.MeasurementTable>tbody').html(tbody);
+
+        $(".MeasurementTable>tbody>tr>td>input[idx='SizeSpec']").on('change', function () {
+            var unit = document.getElementById("SizeUnit").value;
+            const rules = /^(((([0-9]{1,3}[ ])|(^))\d{1,2}[/]\d{1,2})|([0-9]{1,3}))$/;
+            var bol = rules.test($(this).val());
+            var val = $(this).val();
+            var standard = $(this).parent().parent().children().find("p[idx='standard']").html();
+            var tolh = $(this).parent().parent().children().find("p[idx='Tol+']").html();
+            var toll = $(this).parent().parent().children().find("p[idx='Tol-']").html();
+
+            if (val == "" || val <= 0) {
+                $(this).val("");
+                $(this).parent().parent().children().find("p[class='Diff']").html('');
+                $(this).parent().parent().children().find("p[class='Diff']").parent().removeClass("bg-lightred");
+                return;
+            }
+
+            if (unit == "INCH" && !bol) {
+                msg.WithError("Format incorrect");
+                $(this).val("");
+                return;
+            }
+
+            // 計算Diff
+            if (unit == "INCH") {
+                if (standard.indexOf('.') > -1) {
+                    return;
+                }
+
+                var finval = FractionDiff(standard, val);
+                $(this).parent().parent().children().find("p[class='Diff']").html(finval);
+
+                var sTolh = FractionAdd(standard, tolh);
+                var sToll = FractionDiff(standard, toll);
+
+                var diffTolh = String(FractionDiff(sTolh, val));
+                var diffToll = String(FractionDiff(val, sToll));
+                if (diffTolh.indexOf('-') > -1 || diffToll.indexOf('-') > -1) {
+                    $(this).parent().parent().children().find("p[class='Diff']").parent().addClass("bg-lightred");
+                }
+                else {
+                    $(this).parent().parent().children().find("p[class='Diff']").parent().removeClass("bg-lightred");
+                }
+            }
+            else {
+                if (standard.indexOf('/') > -1) {
+                    return;
+                }
+
+                var finval = accSubtr(standard, val);
+                $(this).parent().parent().children().find("p[class='Diff']").html(finval);
+
+                val = parseFloat(val);
+                var sTolh = parseFloat(accAdd(standard, tolh));
+                var sToll = parseFloat(accSubtr(standard, toll));
+                if (sTolh >= val && val >= sToll) {
+                    $(this).parent().parent().children().find("p[class='Diff']").parent().removeClass("bg-lightred");
+                }
+                else {
+                    $(this).parent().parent().children().find("p[class='Diff']").parent().addClass("bg-lightred");
+                }
+            }
+        });
+
+    }
 
 </script>
