--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
@@ -134,7 +134,7 @@
             var list = d[2];
             var sTr = "";
             $(list).each(function (index, value) {
-                sTr = sTr + "<tr><td>" + value[1] + "</td>";
+                sTr = sTr + "<tr><td style='width:95%'>" + value[1] + "</td>";
                 if (value[2]) {
                     sTr = sTr + "<td style='vertical-align: middle'><input type='checkbox' id='"+ value[0] +"' name='" + value[0] + "' checked /></td></tr>";
                 }
