--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
@@ -33,6 +33,7 @@
         }
     </style>
 }
+@Html.Partial("~/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml")
 <div class="DownLeftWhiteBackgrond">
     <div style="padding:2em 3em 2em 3em">
         <div class="col-auto"><h1 style="font-size:2em">Inspection Setting</h1></div>
@@ -74,7 +75,7 @@
         <table class="col-auto table_div" style="width:100%">
             <tr>
                 <td colspan="2"><label>Detection Instrument</label></td>
-                <td colspan="4"><label>(Standard:7.5)</label></td>
+                <td colspan="4"><label>(Standard:<label id="GarmentStandard"></label>)</label></td>
             </tr>
             <tr>
                 <td><label>Top</label></td>
@@ -109,7 +110,7 @@
             </tr>
             <tr>
                 <td style="vertical-align:top"><label>Remark</label></td>
-                <td colspan="3">@Html.TextAreaFor(o => o.Remark, new { @style = "width:40%;min-height:200px" })</td>
+                <td colspan="3">@Html.TextAreaFor(o => o.Remark, new { @style = "width:40%;min-height:150px" })</td>
             </tr>
         </table>
     </div>
@@ -136,7 +137,7 @@
                 {
                     <tr class="row-content" style="vertical-align: middle; text-align: center;">
                         <td>
-                            <input type="radio" value="@ViewBag.ListCartonItem[i].FinalInspection_OrderCartonUkey" id="carton_select_@ViewBag.ListCartonItem[i].FinalInspection_OrderCartonUkey">
+                            <input type="radio" value="@ViewBag.ListCartonItem[i].FinalInspection_OrderCartonUkey" name="carton_select" id="carton_select_@ViewBag.ListCartonItem[i].FinalInspection_OrderCartonUkey">
                         </td>
                         <td>
                             @ViewBag.ListCartonItem[i].OrderID
@@ -163,27 +164,23 @@
         <table cellspacing="100" id="myEndlineMoisture" class="table table-striped display">
             <thead>
                 <tr class="row-name">
-                    <th>Select</th>
-                    <th>SP#</th>
-                    <th>Packing List ID</th>
-                    <th>CTN No</th>
+                    <th>Detection Instrument</th>
+                    <th>Fabrication</th>
+                    <th>Garment Moisture Standard</th>
                 </tr>
             </thead>
             <tbody>
-                @for (int i = 0; i < @ViewBag.ListCartonItem.Count; i++)
+                @for (int i = 0; i < @ViewBag.ListEndlineMoisture.Count; i++)
                 {
                     <tr class="row-content" style="vertical-align: middle; text-align: center;">
                         <td>
-                            <input type="checkbox" value="@ViewBag.ListCartonItem[i].FinalInspection_OrderCartonUkey" id="carton_select_@ViewBag.ListCartonItem[i].FinalInspection_OrderCartonUkey">
+                            @ViewBag.ListEndlineMoisture[i].Instrument
                         </td>
                         <td>
-                            @ViewBag.ListCartonItem[i].OrderID
+                            @ViewBag.ListEndlineMoisture[i].Fabrication
                         </td>
                         <td>
-                            @ViewBag.ListCartonItem[i].PackinglistID
-                        </td>
-                        <td>
-                            @ViewBag.ListCartonItem[i].CTNNo
+                            @ViewBag.ListEndlineMoisture[i].Standard
                         </td>
                     </tr>
                 }
@@ -201,7 +198,7 @@
     <script>
         var EditMode = false; //彈出視窗設定
         var msg = new MessagerAlert();
-
+        var myEndlineMoistureTable;
 
         $(function () {
             var adata = [];
@@ -317,7 +314,7 @@
             });
 
             // myEndlineMoisture
-            var myEndlineMoisture = $('#myEndlineMoisture').DataTable({
+            myEndlineMoistureTable = $('#myEndlineMoisture').DataTable({
                 "pageLength": 5,
                 "autoWidth": false,
                 "info": false,
@@ -333,12 +330,14 @@
                 ]
             });
 
+
+            //設定選擇
             $('#myEndlineMoisture tBody').on('click', 'tr', function () {
                 if ($(this).hasClass('selected')) {
                     $(this).removeClass('selected');
                 }
                 else {
-                    table.$('tr.selected').removeClass('selected');
+                    myEndlineMoistureTable.$('tr.selected').removeClass('selected');
                     $(this).addClass('selected');
                 }
             });
@@ -351,14 +350,10 @@
                         text: 'Next',
                         click: function () {
 
-                            var checkedList = [];
-                            $('[id^=carton_select_]').each(function () {
-                                if ($(this).prop('checked')) {
-                                    checkedList.push($(this).val());
-                                }
-                            });
-
-                            document.getElementById("Cartons").value = checkedList.join(',');
+                            var dataRow = myEndlineMoistureTable.row('.selected').data();
+                            document.getElementById("Instrument").value = dataRow[0];
+                            document.getElementById("Fabrication").value = dataRow[1];
+                            document.getElementById("GarmentStandard").innerHTML = dataRow[2];
                             $(this).dialog("close");
                         }
                         , "class": "button"
